--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,6 @@
 <header>
+    
+    <!-- <img src="assets/task-management-logo.png" alt=""> -->
     <h1>EasyTask</h1>
     <h4>Enterprise-Level task management without friction</h4>
 </header>
